[gd_scene load_steps=42 format=3 uid="uid://camlxmrbu5mi3"]

[ext_resource type="Texture2D" uid="uid://d0102dprk43n4" path="res://Game/Menu_Buttons/Large Buttons/Large Buttons/New game Button.png" id="1_1ha7t"]
[ext_resource type="Script" uid="uid://bkd4xxlfoq45n" path="res://Game/Script/menu.gd" id="1_4te8n"]
[ext_resource type="Texture2D" uid="uid://quwaqrbplju" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/9 Background.png" id="1_wrcku"]
[ext_resource type="Texture2D" uid="uid://cmab5uv0pvqih" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/8 Stars2.png" id="2_kk6d0"]
[ext_resource type="Shader" uid="uid://dq3j57qltliiy" path="res://Game/Menu_Buttons/8.gdshader" id="2_qnlpb"]
[ext_resource type="Texture2D" uid="uid://4jwcwn4pj58h" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/1 Layer1.png" id="2_spqeg"]
[ext_resource type="Texture2D" uid="uid://bico3by1aylus" path="res://Game/Menu_Buttons/Large Buttons/Large Buttons/Load Button.png" id="3_0cogu"]
[ext_resource type="Texture2D" uid="uid://kldk1xoih0y0" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/7 Clouds2.png" id="3_2p5wm"]
[ext_resource type="Texture2D" uid="uid://dlrfpsuswewcl" path="res://Game/Menu_Buttons/Large Buttons/Large Buttons/Settings Button.png" id="3_7ulc0"]
[ext_resource type="Texture2D" uid="uid://c3hiu0gfxn7b5" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/6 Sun.png" id="4_gj5r8"]
[ext_resource type="Shader" uid="uid://cp4jguma0onns" path="res://Game/Menu_Buttons/7.gdshader" id="4_o3pwg"]
[ext_resource type="Texture2D" uid="uid://b6mmftx5bkt03" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/5 Mountains.png" id="5_21qqj"]
[ext_resource type="Texture2D" uid="uid://cjgprjvmdh7do" path="res://Game/Menu_Buttons/Large Buttons/Colored Large Buttons/Exit  col_Button.png" id="5_xpxiv"]
[ext_resource type="Shader" uid="uid://c1hglgvadwq5c" path="res://Game/Menu_Buttons/6.gdshader" id="6_1ijy8"]
[ext_resource type="Texture2D" uid="uid://yi2dr5h5uyyl" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/4 Layer4.png" id="6_74njc"]
[ext_resource type="Texture2D" uid="uid://bxgnfwvpkb7a4" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/3 Layer3.png" id="7_tw3dh"]
[ext_resource type="Shader" uid="uid://viejrtjeq311" path="res://Game/Menu_Buttons/5.gdshader" id="8_dsk66"]
[ext_resource type="Texture2D" uid="uid://eu4vmvsrhyv0" path="res://Game/Menu_Buttons/Desert Parallax by Cryptogene/2 Layer2.png" id="8_ju6jw"]
[ext_resource type="Shader" uid="uid://j8dl6jws7q8x" path="res://Game/Menu_Buttons/4.gdshader" id="10_e8elo"]
[ext_resource type="Shader" uid="uid://c1h441umh7t0c" path="res://Game/Menu_Buttons/3.gdshader" id="12_7wlbw"]
[ext_resource type="Shader" uid="uid://c0wxo1nsifjmh" path="res://Game/Menu_Buttons/2.gdshader" id="14_8y03c"]
[ext_resource type="Shader" uid="uid://dhx41vy8o0tp3" path="res://Game/Menu_Buttons/1.gdshader" id="16_oqcva"]
[ext_resource type="AudioStream" uid="uid://dcok2o8jbmwit" path="res://Res/Map/vacaroxa--generic-old-west-audio--v.1.0/vacaroxa--generic-old-west-audio--v.1.0/Generic Old West Audio/OST/MP3/Looped Versions/04 - A New Day (Loop Version).mp3" id="23_4hw03"]
[ext_resource type="PackedScene" uid="uid://caulsun36ec64" path="res://Game/Scene/Setting_menu.tscn" id="24_882td"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_swdj6"]
shader = ExtResource("2_qnlpb")
shader_parameter/speed = 0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mu1r4"]
shader = ExtResource("4_o3pwg")
shader_parameter/speed = 0.03

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yu3cs"]
shader = ExtResource("6_1ijy8")
shader_parameter/speed = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d372x"]
shader = ExtResource("8_dsk66")
shader_parameter/speed = 0.06

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cf3ac"]
shader = ExtResource("10_e8elo")
shader_parameter/speed = 0.08

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a41ao"]
shader = ExtResource("12_7wlbw")
shader_parameter/speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4spr"]
shader = ExtResource("14_8y03c")
shader_parameter/speed = 0.15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pdj6m"]
shader = ExtResource("16_oqcva")
shader_parameter/speed = 0.2

[sub_resource type="SystemFont" id="SystemFont_du64s"]
font_names = PackedStringArray("Bookman Old Style")

[sub_resource type="GDScript" id="GDScript_6yvlx"]

[sub_resource type="GDScript" id="GDScript_4hw03"]

[sub_resource type="GDScript" id="GDScript_882td"]

[sub_resource type="LabelSettings" id="LabelSettings_882td"]
font_size = 40
outline_color = Color(0.498039, 0, 0, 1)

[sub_resource type="Animation" id="Animation_4te8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_882td"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.498276),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dy1y"]
_data = {
&"RESET": SubResource("Animation_4te8n"),
&"fade_in": SubResource("Animation_882td")
}

[sub_resource type="LabelSettings" id="LabelSettings_4te8n"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -23.0
offset_right = 56.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4te8n")
metadata/_edit_horizontal_guides_ = [201.0]
metadata/_edit_vertical_guides_ = [567.0, 886.0]

[node name="TextureRect9" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wrcku")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_swdj6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kk6d0")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_mu1r4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2p5wm")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_yu3cs")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gj5r8")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_d372x")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_21qqj")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_cf3ac")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_74njc")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_a41ao")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_tw3dh")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_k4spr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ju6jw")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_pdj6m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spqeg")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Seperator"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -5.0
offset_top = 70.0
offset_right = -5.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_du64s")
theme_override_font_sizes/font_size = 100
text = "Endless West
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="New" type="Button" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 285.0
offset_right = 1186.0
offset_bottom = 393.0
size_flags_horizontal = 4
icon = ExtResource("1_1ha7t")
script = SubResource("GDScript_6yvlx")

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 877.0
offset_top = 406.0
offset_right = 1185.0
offset_bottom = 514.0
icon = ExtResource("3_0cogu")

[node name="Setting" type="Button" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 523.0
offset_right = 1186.0
offset_bottom = 631.0
icon = ExtResource("3_7ulc0")
script = SubResource("GDScript_4hw03")

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 878.0
offset_top = 643.0
offset_right = 1186.0
offset_bottom = 751.0
icon = ExtResource("5_xpxiv")
script = SubResource("GDScript_882td")

[node name="About" type="Button" parent="."]
layout_mode = 0
offset_left = 1829.0
offset_top = 964.0
offset_right = 1939.0
offset_bottom = 1017.0
text = "About us
"

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_4hw03")
volume_db = -10.0
autoplay = true

[node name="Control" parent="." instance=ExtResource("24_882td")]
visible = false
layout_mode = 1
offset_left = 37.0
offset_top = 23.0
offset_right = 37.0
offset_bottom = 23.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -11.0
offset_right = 2049.0
offset_bottom = 1188.0
color = Color(0, 0, 0, 0.933333)

[node name="Label" type="Label" parent="ColorRect"]
z_index = 1
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 2050.0
offset_bottom = 1181.0
text = "Розробники:
Кіндінов Іван
Одиноченко Антон"
label_settings = SubResource("LabelSettings_882td")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1836.0
offset_top = 1046.0
offset_right = 1925.0
offset_bottom = 1101.0
text = "Назад"

[node name="FadeScreen" type="CanvasLayer" parent="."]
visible = false

[node name="fade" type="ColorRect" parent="FadeScreen"]
modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeScreen"]
libraries = {
&"": SubResource("AnimationLibrary_0dy1y")
}

[node name="help" type="Button" parent="."]
layout_mode = 0
offset_left = 1754.0
offset_top = 907.0
offset_right = 1963.0
offset_bottom = 952.0
text = "Допомога з керуванням"

[node name="CanvasLayer11" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer11"]
modulate = Color(1, 1, 1, 0.890196)
offset_left = -108.0
offset_top = -63.0
offset_right = 2049.0
offset_bottom = 1189.0
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer11/ColorRect"]
layout_mode = 0
offset_left = 231.0
offset_top = 63.0
offset_right = 1987.0
offset_bottom = 1141.0

[node name="Label" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 2
anchor_left = 0.000463607
anchor_top = 0.000798722
anchor_right = 0.000463607
anchor_bottom = 0.000798722
offset_left = 873.0
offset_top = 367.0
offset_right = 933.0
offset_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
text = "Ходити"
label_settings = SubResource("LabelSettings_4te8n")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 0
offset_left = 873.0
offset_top = 405.0
offset_right = 913.0
offset_bottom = 428.0
scale = Vector2(1.5, 1.5)
text = "Біг"

[node name="Label3" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000927214
anchor_right = -0.000927214
offset_left = 875.0
offset_top = 447.0
offset_right = 946.0
offset_bottom = 470.0
scale = Vector2(1.5, 1.5)
text = "Стріляти"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000463607
anchor_top = 0.00559105
anchor_right = -0.000463607
anchor_bottom = 0.00559105
offset_left = 873.0
offset_top = 485.0
offset_right = 978.0
offset_bottom = 508.0
scale = Vector2(1.5, 1.5)
text = "Прицілитись"
metadata/_edit_use_anchors_ = true

[node name="Label5" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0064905
anchor_top = 0.000798746
anchor_right = 0.0064905
anchor_bottom = 0.000798746
offset_left = 858.0
offset_top = 532.0
offset_right = 999.0
offset_bottom = 555.0
scale = Vector2(1.5, 1.5)
text = "Взаємодія/Діалог"
metadata/_edit_use_anchors_ = true

[node name="Label6" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00973574
anchor_top = 0.00958469
anchor_right = 0.00973574
anchor_bottom = 0.00958469
offset_left = 850.0
offset_top = 565.0
offset_right = 1000.0
offset_bottom = 588.0
scale = Vector2(1.5, 1.5)
text = "Побудувати об'єкт"
metadata/_edit_use_anchors_ = true

[node name="Label7" type="Label" parent="CanvasLayer11/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.000927214
anchor_top = 0.000798722
anchor_right = 0.000927214
anchor_bottom = 0.000798722
offset_left = 871.0
offset_top = 624.0
offset_right = 971.0
offset_bottom = 647.0
scale = Vector2(1.5, 1.5)
text = "Меню паузи"
metadata/_edit_use_anchors_ = true

[node name="Label8" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1192.0
offset_top = 367.0
offset_right = 1264.0
offset_bottom = 390.0
scale = Vector2(1.5, 1.5)
text = "W, A, S, D"

[node name="Label9" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1192.0
offset_top = 408.0
offset_right = 1325.0
offset_bottom = 431.0
scale = Vector2(1.5, 1.5)
text = "SHIFT + W, A, S, D"

[node name="Label10" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1192.0
offset_top = 446.0
offset_right = 1232.0
offset_bottom = 469.0
scale = Vector2(1.5, 1.5)
text = "ЛКМ"

[node name="Label11" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1191.0
offset_top = 490.0
offset_right = 1231.0
offset_bottom = 513.0
scale = Vector2(1.5, 1.5)
text = "ПКМ"

[node name="Label12" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1191.0
offset_top = 532.0
offset_right = 1231.0
offset_bottom = 555.0
scale = Vector2(1.5, 1.5)
text = "E"

[node name="Label13" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1192.0
offset_top = 580.0
offset_right = 1232.0
offset_bottom = 603.0
scale = Vector2(1.5, 1.5)
text = "V"

[node name="Label14" type="Label" parent="CanvasLayer11/ColorRect"]
offset_left = 1191.0
offset_top = 623.0
offset_right = 1231.0
offset_bottom = 646.0
scale = Vector2(1.5, 1.5)
text = "ESC"

[node name="Label15" type="Label" parent="CanvasLayer11/ColorRect"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Label16" type="Label" parent="CanvasLayer11/ColorRect"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Label17" type="Label" parent="CanvasLayer11/ColorRect"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Label18" type="Label" parent="CanvasLayer11/ColorRect"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="CanvasLayer11"]
offset_left = 1728.0
offset_top = 952.0
offset_right = 1785.0
offset_bottom = 983.0
scale = Vector2(2, 2)
text = "Назад"

[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="CanvasLayer11/Button" to="." method="_on_button_pressed"]
